# kernel-project-from-youth

./: CMakeLists.txt  makefile
inc/: basic_io.h~  bio.h  debug-text.h  gdt.h  idt.h  isr_irq.h  kernelheap.h  kpc.h  multiboot.h  multitasking.h  ord_array.h  paging.h  pmm.h  pmm_init.h  types.h
src/: CMakeLists.txt  allsources  linkerscript.ld  makefile
src/bio/: CMakeLists.txt  bio.c
src/boot/: CMakeLists.txt  multiboot.c
src/communication/: kpc.c
src/gdt/: CMakeLists.txt  gdt.c  gdt_asm.asm  makefile
src/heap/: kernelheap.c  ord_array.c
src/idt/: CMakeLists.txt  idt.c  idt_asm.asm  makefile
src/int/: CMakeLists.txt  irq.c  isr.c  isr_irq_asm.asm  makefile
src/main/: CMakeLists.txt  entry.asm  entry_asm.asm  main.c  main.c~
src/multitasking/: multitasking.c
src/paging/: paging_functions.c  paging_functions_asm.asm  paging_init.c
src/phys_mm/: CMakeLists.txt  makefile  pmm_functions.c  pmm_init.c
src/text/: debug-text.c
vm/: floppy.img  makefile  menu.lst
vm/bochs/: bochs.conf  makefile
